include relations for ambiguous

--- a/GO-Rhea-Analysis.ipynb
+++ b/GO-Rhea-Analysis.ipynb
@@ -4191,6 +4191,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note this has implications for the meaning of GO xrefs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Methods\n",
+    "\n",
+    "This notebook and underlying TSV files here are stored in this repo\n",
+    "https://github.com/cmungall/reactioner\n",
+    "\n",
+    "The repo also contains code for regenerating these, should all be orchestratable via Make/Docker"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
