--- a/Chemical-Name-Usage.ipynb
+++ b/Chemical-Name-Usage.ipynb
@@ -26,7 +26,11 @@
    "source": [
     "## Rhea Chebi Name matches\n",
     "\n",
-    "We load a pre-generated "
+    "We load a pre-generated file https://github.com/cmungall/reactioner/tree/master/reports\n",
+    "\n",
+    "This maps the name used in Rhea (after removing any \"a\" prefix) to a CHEBI name (if available), if not available to a syn. We also include the CHEBI synonym source.\n",
+    "\n",
+    "Also, if it doesn't match a name we also see if it maps to IDs for **different** CHEBIs"
    ]
   },
   {
@@ -1090,7 +1094,8 @@
    "metadata": {},
    "source": [
     "## Plot how often Rhea name matches CHEBI name/synonym/none\n",
-    "\n"
+    "\n",
+    "Note this is logarithmic"
    ]
   },
   {
