first pass at notebook for text def analysis

--- a/GO-Rhea-Analysis.ipynb
+++ b/GO-Rhea-Analysis.ipynb
@@ -1186,6 +1186,7 @@
    ],
    "source": [
     "# Show upSet diagram for 4 databases, highlighting terms that have a unique referenced database\n",
+    "# TODO: Reactome\n",
     "create_upset(df, ['kegg', 'rhea', 'metacyc', 'ec'])"
    ]
   },
@@ -4195,6 +4196,15 @@
    "metadata": {},
    "source": [
     "Note this has implications for the meaning of GO xrefs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Gap Filling Xrefs\n",
+    "\n",
+    "TODO!"
    ]
   },
   {
