--- a/Chemical-Name-Usage.ipynb
+++ b/Chemical-Name-Usage.ipynb
@@ -1276,6 +1276,342 @@
     "g.set_xticklabels(g.get_xticklabels(), rotation=45)\n",
     "g.set_yscale('log')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Suggested new terms for CHEBI\n",
+    "\n",
+    "For the cases where the rhea participant name matches NEITHER chebi name NOR a synonym, these are candidate new CHEBI synonyms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>class</th>\n",
+       "      <th>class label</th>\n",
+       "      <th>rhea_name</th>\n",
+       "      <th>info</th>\n",
+       "      <th>score</th>\n",
+       "      <th>rhea</th>\n",
+       "      <th>rhea label</th>\n",
+       "      <th>ambiguous_with</th>\n",
+       "      <th>ambiguous_with label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>CHEBI:136751</td>\n",
+       "      <td>D-xylono-1,4-lactone-5-phosphate(2-)</td>\n",
+       "      <td>D-xylono-1,4-lactone-5-phosphate</td>\n",
+       "      <td>ambiguous(http://purl.obolibrary.org/obo/CHEBI...</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>rh:52644</td>\n",
+       "      <td>D-xylono-1,4-lactone-5-phosphate + H2O = 5-pho...</td>\n",
+       "      <td>CHEBI:136750</td>\n",
+       "      <td>D-xylono-1,4-lactone-5-phosphate</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>CHEBI:136753</td>\n",
+       "      <td>L-arabino-1,4-lactone-5-phosphate(2-)</td>\n",
+       "      <td>L-arabino-1,4-lactone-5-phosphate</td>\n",
+       "      <td>ambiguous(http://purl.obolibrary.org/obo/CHEBI...</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>rh:52648</td>\n",
+       "      <td>H2O + L-arabino-1,4-lactone-5-phosphate = 5-ph...</td>\n",
+       "      <td>CHEBI:136752</td>\n",
+       "      <td>L-arabino-1,4-lactone-5-phosphate</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>CHEBI:138473</td>\n",
+       "      <td>N(2)-[(3R)-3-(2-saturated-acyloxy)acyl]-L-orni...</td>\n",
+       "      <td>an N(2)-[(3R)-3-(1,2-saturated-acyloxy)acyl]-L...</td>\n",
+       "      <td>newsyn</td>\n",
+       "      <td>0.916667</td>\n",
+       "      <td>rh:20461|rh:55028|rh:55756</td>\n",
+       "      <td>an N(2)-[(3R)-3-(1,2-saturated-acyloxy)acyl]-L...</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>CHEBI:142126</td>\n",
+       "      <td>(E)-sinapaldehyde 4-O-beta-D-glucopyranoside</td>\n",
+       "      <td>4-O-(beta-D-glucosyl)-4-trans-sinapyl aldehyde</td>\n",
+       "      <td>newsyn</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>rh:57712</td>\n",
+       "      <td>trans-sinapoyl aldehyde + UDP-alpha-D-glucose ...</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>CHEBI:16520</td>\n",
+       "      <td></td>\n",
+       "      <td>R'C(R)SH</td>\n",
+       "      <td>newsyn</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>rh:17357</td>\n",
+       "      <td>O2 + 2 R'C(R)SH = H2O2 + R'C(R)S-S(R)CR'</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>CHEBI:17412</td>\n",
+       "      <td></td>\n",
+       "      <td>R'C(R)S-S(R)CR'</td>\n",
+       "      <td>newsyn</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>rh:17357</td>\n",
+       "      <td>O2 + 2 R'C(R)SH = H2O2 + R'C(R)S-S(R)CR'</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>CHEBI:18000</td>\n",
+       "      <td>aralkylamine</td>\n",
+       "      <td>arylalkylamine</td>\n",
+       "      <td>ambiguous(http://purl.obolibrary.org/obo/CHEBI...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>rh:10352</td>\n",
+       "      <td>H2O + N-acetylarylalkylamine = acetate + aryla...</td>\n",
+       "      <td>CHEBI:22644</td>\n",
+       "      <td>arylalkylamine</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>CHEBI:28133</td>\n",
+       "      <td>S-alkyl-L-cysteine S-oxide</td>\n",
+       "      <td>an S-alkyl-L-cysteine S-oxide</td>\n",
+       "      <td>ambiguous(http://purl.obolibrary.org/obo/CHEBI...</td>\n",
+       "      <td>0.833333</td>\n",
+       "      <td>rh:20141</td>\n",
+       "      <td>an S-alkyl-L-cysteine S-oxide = 2-aminoprop-2-...</td>\n",
+       "      <td>CHEBI:142409</td>\n",
+       "      <td>S-alkyl-L-cysteine S-oxide zwitterion</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>CHEBI:58592</td>\n",
+       "      <td>5-amino-1-(5-phosphonato-D-ribosyl)imidazol-3-ium</td>\n",
+       "      <td>5-amino-1-(5-phospho-D-ribosyl)imidazole</td>\n",
+       "      <td>ambiguous(http://purl.obolibrary.org/obo/CHEBI...</td>\n",
+       "      <td>0.454545</td>\n",
+       "      <td>rh:10792|rh:19317|rh:23032|rh:24840</td>\n",
+       "      <td>5-amino-1-(5-phospho-D-ribosyl)imidazole-4-car...</td>\n",
+       "      <td>CHEBI:28843</td>\n",
+       "      <td>5-amino-1-(5-phospho-D-ribosyl)imidazole</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>CHEBI:70790</td>\n",
+       "      <td>pentalenolactone(1-)</td>\n",
+       "      <td>pentalenolactone</td>\n",
+       "      <td>newsyn</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>rh:34575</td>\n",
+       "      <td>2 H(+) + O2 + pentalenolactone F + 2 reduced [...</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>CHEBI:71477</td>\n",
+       "      <td>guanosine 3'-diphosphate 5'-triphosphate(7-)</td>\n",
+       "      <td>guanosine 3'-diphosphate 5'-triphosphate</td>\n",
+       "      <td>ambiguous(http://purl.obolibrary.org/obo/CHEBI...</td>\n",
+       "      <td>0.833333</td>\n",
+       "      <td>rh:13073|rh:22088|rh:33055</td>\n",
+       "      <td>guanosine 3'-diphosphate 5'-triphosphate + H2O...</td>\n",
+       "      <td>CHEBI:142410</td>\n",
+       "      <td>guanosine 3'-diphosphate 5'-triphosphate hexaa...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>CHEBI:76177</td>\n",
+       "      <td>(2R)-2-hydroxy fatty acid anion</td>\n",
+       "      <td>(R)-2-hydroxy fatty acid anion</td>\n",
+       "      <td>newsyn</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>rh:38855</td>\n",
+       "      <td>1,2-saturated fatty acid + 2 [Fe(II)-cytochrom...</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>CHEBI:85097</td>\n",
+       "      <td>4-saturated trans-2-enoyl-CoA(4-)</td>\n",
+       "      <td>(2E)-enoyl-CoA</td>\n",
+       "      <td>newsyn</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>rh:45228|rh:45900</td>\n",
+       "      <td>a (3E)-enoyl-CoA = a (2E)-enoyl-CoA|a (3Z)-eno...</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>CHEBI:9380</td>\n",
+       "      <td>syringin</td>\n",
+       "      <td>4-O-(beta-D-glucosyl)-trans-4-sinapyl alcohol</td>\n",
+       "      <td>newsyn</td>\n",
+       "      <td>0.777778</td>\n",
+       "      <td>rh:57460</td>\n",
+       "      <td>trans-sinapyl alcohol + UDP-alpha-D-glucose = ...</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           class                                        class label  \\\n",
+       "0   CHEBI:136751               D-xylono-1,4-lactone-5-phosphate(2-)   \n",
+       "1   CHEBI:136753              L-arabino-1,4-lactone-5-phosphate(2-)   \n",
+       "2   CHEBI:138473  N(2)-[(3R)-3-(2-saturated-acyloxy)acyl]-L-orni...   \n",
+       "3   CHEBI:142126       (E)-sinapaldehyde 4-O-beta-D-glucopyranoside   \n",
+       "4    CHEBI:16520                                                      \n",
+       "5    CHEBI:17412                                                      \n",
+       "6    CHEBI:18000                                       aralkylamine   \n",
+       "7    CHEBI:28133                         S-alkyl-L-cysteine S-oxide   \n",
+       "8    CHEBI:58592  5-amino-1-(5-phosphonato-D-ribosyl)imidazol-3-ium   \n",
+       "9    CHEBI:70790                               pentalenolactone(1-)   \n",
+       "10   CHEBI:71477       guanosine 3'-diphosphate 5'-triphosphate(7-)   \n",
+       "11   CHEBI:76177                    (2R)-2-hydroxy fatty acid anion   \n",
+       "12   CHEBI:85097                  4-saturated trans-2-enoyl-CoA(4-)   \n",
+       "13    CHEBI:9380                                           syringin   \n",
+       "\n",
+       "                                            rhea_name  \\\n",
+       "0                    D-xylono-1,4-lactone-5-phosphate   \n",
+       "1                   L-arabino-1,4-lactone-5-phosphate   \n",
+       "2   an N(2)-[(3R)-3-(1,2-saturated-acyloxy)acyl]-L...   \n",
+       "3      4-O-(beta-D-glucosyl)-4-trans-sinapyl aldehyde   \n",
+       "4                                            R'C(R)SH   \n",
+       "5                                     R'C(R)S-S(R)CR'   \n",
+       "6                                      arylalkylamine   \n",
+       "7                       an S-alkyl-L-cysteine S-oxide   \n",
+       "8            5-amino-1-(5-phospho-D-ribosyl)imidazole   \n",
+       "9                                   pentalenolactone    \n",
+       "10           guanosine 3'-diphosphate 5'-triphosphate   \n",
+       "11                     (R)-2-hydroxy fatty acid anion   \n",
+       "12                                     (2E)-enoyl-CoA   \n",
+       "13      4-O-(beta-D-glucosyl)-trans-4-sinapyl alcohol   \n",
+       "\n",
+       "                                                 info     score  \\\n",
+       "0   ambiguous(http://purl.obolibrary.org/obo/CHEBI...  1.000000   \n",
+       "1   ambiguous(http://purl.obolibrary.org/obo/CHEBI...  1.000000   \n",
+       "2                                              newsyn  0.916667   \n",
+       "3                                              newsyn  1.000000   \n",
+       "4                                              newsyn  0.000000   \n",
+       "5                                              newsyn  0.000000   \n",
+       "6   ambiguous(http://purl.obolibrary.org/obo/CHEBI...  0.000000   \n",
+       "7   ambiguous(http://purl.obolibrary.org/obo/CHEBI...  0.833333   \n",
+       "8   ambiguous(http://purl.obolibrary.org/obo/CHEBI...  0.454545   \n",
+       "9                                              newsyn  1.000000   \n",
+       "10  ambiguous(http://purl.obolibrary.org/obo/CHEBI...  0.833333   \n",
+       "11                                             newsyn  0.000000   \n",
+       "12                                             newsyn  0.000000   \n",
+       "13                                             newsyn  0.777778   \n",
+       "\n",
+       "                                   rhea  \\\n",
+       "0                              rh:52644   \n",
+       "1                              rh:52648   \n",
+       "2            rh:20461|rh:55028|rh:55756   \n",
+       "3                              rh:57712   \n",
+       "4                              rh:17357   \n",
+       "5                              rh:17357   \n",
+       "6                              rh:10352   \n",
+       "7                              rh:20141   \n",
+       "8   rh:10792|rh:19317|rh:23032|rh:24840   \n",
+       "9                              rh:34575   \n",
+       "10           rh:13073|rh:22088|rh:33055   \n",
+       "11                             rh:38855   \n",
+       "12                    rh:45228|rh:45900   \n",
+       "13                             rh:57460   \n",
+       "\n",
+       "                                           rhea label ambiguous_with  \\\n",
+       "0   D-xylono-1,4-lactone-5-phosphate + H2O = 5-pho...   CHEBI:136750   \n",
+       "1   H2O + L-arabino-1,4-lactone-5-phosphate = 5-ph...   CHEBI:136752   \n",
+       "2   an N(2)-[(3R)-3-(1,2-saturated-acyloxy)acyl]-L...                  \n",
+       "3   trans-sinapoyl aldehyde + UDP-alpha-D-glucose ...                  \n",
+       "4            O2 + 2 R'C(R)SH = H2O2 + R'C(R)S-S(R)CR'                  \n",
+       "5            O2 + 2 R'C(R)SH = H2O2 + R'C(R)S-S(R)CR'                  \n",
+       "6   H2O + N-acetylarylalkylamine = acetate + aryla...    CHEBI:22644   \n",
+       "7   an S-alkyl-L-cysteine S-oxide = 2-aminoprop-2-...   CHEBI:142409   \n",
+       "8   5-amino-1-(5-phospho-D-ribosyl)imidazole-4-car...    CHEBI:28843   \n",
+       "9   2 H(+) + O2 + pentalenolactone F + 2 reduced [...                  \n",
+       "10  guanosine 3'-diphosphate 5'-triphosphate + H2O...   CHEBI:142410   \n",
+       "11  1,2-saturated fatty acid + 2 [Fe(II)-cytochrom...                  \n",
+       "12  a (3E)-enoyl-CoA = a (2E)-enoyl-CoA|a (3Z)-eno...                  \n",
+       "13  trans-sinapyl alcohol + UDP-alpha-D-glucose = ...                  \n",
+       "\n",
+       "                                 ambiguous_with label  \n",
+       "0                    D-xylono-1,4-lactone-5-phosphate  \n",
+       "1                   L-arabino-1,4-lactone-5-phosphate  \n",
+       "2                                                      \n",
+       "3                                                      \n",
+       "4                                                      \n",
+       "5                                                      \n",
+       "6                                      arylalkylamine  \n",
+       "7               S-alkyl-L-cysteine S-oxide zwitterion  \n",
+       "8            5-amino-1-(5-phospho-D-ribosyl)imidazole  \n",
+       "9                                                      \n",
+       "10  guanosine 3'-diphosphate 5'-triphosphate hexaa...  \n",
+       "11                                                     \n",
+       "12                                                     \n",
+       "13                                                     "
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Fetch xref data and set up DBs\n",
+    "df = pd.read_csv(\"reports/go-rhea-newsyns.tsv\", sep=\"\\t\").fillna(\"\")\n",
+    "## Show samples\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
