re-ran notebooks and regen tsvs

--- a/Chemical-Name-Usage.ipynb
+++ b/Chemical-Name-Usage.ipynb
@@ -1607,6 +1607,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The score is the jaccard index from comparing tokenized names. Note for many where score=0, the CHEBI ID used by Rhea may have been obsoleted."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
